ok hopefully now we're briefer

--- a/inst/rmarkdown/templates/foodlab_presentation/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/foodlab_presentation/skeleton/skeleton.Rmd
@@ -1,14 +1,10 @@
 ---
 title: "Your Presentation Title"
-subtitle: "Optional Subtitle"
 author: "Your Name"
 institute: "Humane & Sustainable Food Lab, Stanford University"
 date: "`r Sys.Date()`"
 output:
   beamer_presentation:
-    theme: "FoodLab"
-    colortheme: "default"
-    fonttheme: "default"
     slide_level: 2
     keep_tex: false
     includes:
@@ -17,115 +13,31 @@ classoption: "aspectratio=169"
 ---
 
 ```{r setup, include=FALSE}
-# Copy theme file to working directory
-theme_path <- system.file(
-  "rmarkdown/templates/foodlab_presentation/resources/beamerthemeFoodLab.sty",
-  package = "foodlabslides"
-)
-if (file.exists(theme_path)) {
-  file.copy(theme_path, "beamerthemeFoodLab.sty", overwrite = TRUE)
+# Copy required files from package to working directory
+pkg_resources <- system.file("rmarkdown/templates/foodlab_presentation", 
+                             package = "foodlabslides")
+
+# Copy theme file
+theme_file <- file.path(pkg_resources, "resources/beamerthemeFoodLab.sty")
+if (file.exists(theme_file)) {
+  file.copy(theme_file, "beamerthemeFoodLab.sty", overwrite = TRUE)
 }
 
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE,
-                      fig.align = 'center', out.width = '80%')
-library(ggplot2)
-# Set ggplot theme to match presentation
-theme_set(theme_minimal(base_size = 14) + 
-          theme(plot.background = element_rect(fill = "#E8E1D3", color = NA),
-                panel.background = element_rect(fill = "#E8E1D3", color = NA)))
+# Copy preamble if not already present
+preamble_file <- file.path(pkg_resources, "skeleton/preamble.tex")
+if (file.exists(preamble_file) && !file.exists("preamble.tex")) {
+  file.copy(preamble_file, "preamble.tex", overwrite = FALSE)
+}
+
+knitr::opts_chunk$set(echo = FALSE)
 ```
 
-# Introduction
+## My Presentation
 
-## Research Overview
+This is my first slide.
 
-This is a sample slide demonstrating the Food Lab presentation template.
+## My Stuff
 
-Key features:
-
-- Clean, minimal design
-- Stanford Cardinal red accents
-- Food Lab branding
-- Easy to customize
-
-## Using R Code
-
-```{r cars-plot, fig.cap="Sample plot with matching theme"}
-ggplot(mtcars, aes(x = wt, y = mpg)) +
-  geom_point(color = "#8C1515", size = 3) +
-  geom_smooth(method = "lm", color = "#2E2D29", se = TRUE, alpha = 0.2) +
-  labs(title = "Fuel Efficiency vs Weight",
-       x = "Weight (1000 lbs)",
-       y = "Miles per Gallon")
-```
-
-# Methods
-
-## Study Design
-
-You can include:
-
-- Bullet points
-- **Bold text**
-- *Italic text*
-- `Code snippets`
-
-## Data Analysis
-
-::: {.columns}
-:::: {.column width="50%"}
-**Quantitative**
-
-- Statistical models
-- Effect sizes
-- Confidence intervals
-::::
-
-:::: {.column width="50%"}
-**Qualitative**
-
-- Thematic analysis
-- Case studies
-- Interviews
-::::
-:::
-
-# Results
-
-## Main Findings
-
-:::block
-### Key Result
-This is an important finding highlighted in a block.
-:::
-
-Additional context and interpretation of results.
-
-## Statistical Analysis
-
-```{r table-example}
-knitr::kable(head(mtcars[, 1:4], 5),
-             caption = "Sample data table",
-             booktabs = TRUE)
-```
-
-# Discussion
-
-## Implications
-
-1. First major implication
-2. Second major implication
-3. Future directions
-
-## Acknowledgments
-
-- Funding sources
-- Collaborators
-- Lab members
-
-\vspace{1cm}
-
-\centering
-**Thank you!**
-
-Questions?
+- Point one
+- Point two
+- Point three
